--- a/index.html
+++ b/index.html
@@ -11,63 +11,40 @@
     <div class="chat-container">
       <ul class="chat">
         <li class="message left">
-          <img
-            class="avatar"
-            src="cat.avif"
-            alt=""
-          />
+          <img class="avatar" src="cat.avif" alt="" />
           <p>Assalomu aleykum</p>
         </li>
         <li class="message right">
-          <img
-            class="avatar"
-            src="dog.avif"
-            alt=""
-          />
+          <img class="avatar" src="dog.avif" alt="" />
           <p>Vaaleykum assalom</p>
         </li>
         <li class="message left">
-          <img
-            class="avatar"
-            src="cat.avif"
-            alt=""
-          />
+          <img class="avatar" src="cat.avif" alt="" />
           <p>Yaxshimisiz, Ramazon Muborak)</p>
         </li>
         <li class="message right">
-          <img
-            class="avatar"
-            src="dog.avif"
-            alt=""
-          />
+          <img class="avatar" src="dog.avif" alt="" />
           <p>Yaxshi raxmat Alhamdulillah, raxmat sangayam Muborak bo'lsin!!!</p>
         </li>
         <li class="message left">
-          <img
-            class="avatar"
-            src="cat.avif"
-            alt=""
-          />
-          <p>Iltimos iftorlikdan keyin gaplashaylik gunox bo'ladi bo'lmasam :(</p>
+          <img class="avatar" src="cat.avif" alt="" />
+          <p>
+            Iltimos iftorlikdan keyin gaplashaylik gunox bo'ladi bo'lmasam :(
+          </p>
         </li>
         <li class="message right">
-          <img
-            class="avatar"
-            src="dog.avif"
-            alt=""
-          />
+          <img class="avatar" src="dog.avif" alt="" />
           <p>Albatta</p>
         </li>
         <li class="message right">
-          <img
-            class="avatar"
-            src="dog.avif"
-            alt=""
-          />
+          <img class="avatar" src="dog.avif" alt="" />
           <p>Unda tarovehdan keyin gaplashamiz😊😊😊❤️</p>
         </li>
       </ul>
-      <input type="text" class="text_input" placeholder="Message..." />
+      <div class="sss">
+        <input type="text" class="text_input" placeholder="Message..." />
+        <button>></button>
+      </div>
     </div>
   </body>
 </html>
